--- a/css/apply-forUs.css
+++ b/css/apply-forUs.css
@@ -1,12 +1,61 @@
 main {
   line-height: 1.75;
 }
-main .top-bj {
-  height: 100vh;
-  background-color: #061E4D;
-  position: relative;
+main .top-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-main .top-bj #cas {
+main .top-bj {
+  height: calc(100vh - 73px);
+  background-image: url(../img/apply/xingkong.jpg);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #041C4C;
+  background-size: content;
+  background-repeat: no-repeat;
+}
+main .top-bj .top-name {
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 50px;
+  gap: 8px;
+}
+main .top-bj .top-name .top-title-name {
+  font-weight: bold;
+  font-size: 26px;
+  letter-spacing: 4px;
+  display: inline-block;
+}
+main .top-bj .top-name .top-title-des {
+  font-size: 16px;
+  letter-spacing: 2px;
+  display: inline-block;
+}
+main .top-bj #parentContainer {
+  position: relative;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+main .top-bj #parentContainer #cas {
   position: absolute;
   left: 0;
   top: 0;
@@ -16,6 +65,140 @@ main .top-bj #cas {
   width: 100%;
   height: 100%;
   z-index: 0;
+}
+main .top-bj #parentContainer .app-wrapper {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  z-index: 0;
+}
+main .top-bj #parentContainer .app-wrapper .app-content {
+  position: absolute;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 10px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: cyan;
+  font-weight: bold;
+  font-size: 14px;
+}
+main .top-bj #parentContainer .app-wrapper .app-content:hover .app-name {
+  color: #f5bc40;
+}
+main .top-bj #parentContainer .app-wrapper .app-content:hover .app-doi {
+  border-color: #f5bc40;
+  background-color: #f5bc40;
+  color: #f5bc40;
+}
+main .top-bj #parentContainer .app-wrapper .app-content .app-name {
+  cursor: pointer;
+  -webkit-transition: 0.35s;
+  transition: 0.35s;
+}
+main .top-bj #parentContainer .app-wrapper .app-content .app-doi {
+  width: 20px;
+  height: 20px;
+  background-color: cyan;
+  border-radius: 50%;
+  background-clip: content-box;
+  padding: 3px;
+  border: 1px solid cyan;
+  -webkit-animation: daxiao1 infinite;
+          animation: daxiao1 infinite;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  cursor: pointer;
+  -webkit-transition: 0.3;
+  transition: 0.3;
+}
+@-webkit-keyframes daxiao1 {
+  0% {
+    -webkit-box-shadow: 0 0 1px 0 inset, 0 0 10px 0 inset, 0 0 1px 0, 0 0 2px 0, 0 0 3px 0, 0 0 30px 0, 0 0 40px 0;
+            box-shadow: 0 0 1px 0 inset, 0 0 10px 0 inset, 0 0 1px 0, 0 0 2px 0, 0 0 3px 0, 0 0 30px 0, 0 0 40px 0;
+  }
+  50% {
+    -webkit-box-shadow: 0 0 0px 0 inset, 0 0 2px 0 inset, 0 0 1px 0, 0 0 0px 0, 0 0 0px 0, 0 0 0px 0, 0 0 2px 0;
+            box-shadow: 0 0 0px 0 inset, 0 0 2px 0 inset, 0 0 1px 0, 0 0 0px 0, 0 0 0px 0, 0 0 0px 0, 0 0 2px 0;
+  }
+  100% {
+    -webkit-box-shadow: 0 0 1px 0 inset, 0 0 10px 0 inset, 0 0 1px 0, 0 0 2px 0, 0 0 3px 0, 0 0 30px 0, 0 0 40px 0;
+            box-shadow: 0 0 1px 0 inset, 0 0 10px 0 inset, 0 0 1px 0, 0 0 2px 0, 0 0 3px 0, 0 0 30px 0, 0 0 40px 0;
+  }
+}
+@keyframes daxiao1 {
+  0% {
+    -webkit-box-shadow: 0 0 1px 0 inset, 0 0 10px 0 inset, 0 0 1px 0, 0 0 2px 0, 0 0 3px 0, 0 0 30px 0, 0 0 40px 0;
+            box-shadow: 0 0 1px 0 inset, 0 0 10px 0 inset, 0 0 1px 0, 0 0 2px 0, 0 0 3px 0, 0 0 30px 0, 0 0 40px 0;
+  }
+  50% {
+    -webkit-box-shadow: 0 0 0px 0 inset, 0 0 2px 0 inset, 0 0 1px 0, 0 0 0px 0, 0 0 0px 0, 0 0 0px 0, 0 0 2px 0;
+            box-shadow: 0 0 0px 0 inset, 0 0 2px 0 inset, 0 0 1px 0, 0 0 0px 0, 0 0 0px 0, 0 0 0px 0, 0 0 2px 0;
+  }
+  100% {
+    -webkit-box-shadow: 0 0 1px 0 inset, 0 0 10px 0 inset, 0 0 1px 0, 0 0 2px 0, 0 0 3px 0, 0 0 30px 0, 0 0 40px 0;
+            box-shadow: 0 0 1px 0 inset, 0 0 10px 0 inset, 0 0 1px 0, 0 0 2px 0, 0 0 3px 0, 0 0 30px 0, 0 0 40px 0;
+  }
+}
+main .top-bj #parentContainer .app-wrapper .app-content:nth-child(1) {
+  left: 10%;
+  top: 20%;
+}
+main .top-bj #parentContainer .app-wrapper .app-content:nth-child(2) {
+  left: 22%;
+  top: 24%;
+}
+main .top-bj #parentContainer .app-wrapper .app-content:nth-child(3) {
+  left: 75%;
+  top: 63%;
+}
+main .top-bj #parentContainer .app-wrapper .app-content:nth-child(4) {
+  left: 40%;
+  top: 40%;
+}
+main .top-bj #parentContainer .app-wrapper .app-content:nth-child(5) {
+  left: 80%;
+  top: 30%;
+}
+main .top-bj #parentContainer .app-wrapper .app-content:nth-child(6) {
+  left: 56%;
+  top: 66%;
+}
+main .top-bj #parentContainer .app-wrapper .app-content:nth-child(7) {
+  left: 13%;
+  top: 65%;
+}
+main .top-bj #parentContainer .app-wrapper .app-content:nth-child(8) {
+  left: 60%;
+  top: 35%;
+}
+main .top-bj #parentContainer .app-wrapper .app-content:nth-child(9) {
+  left: 35%;
+  top: 3%;
+}
+main .top-bj #parentContainer .app-wrapper .app-content:nth-child(10) {
+  left: 28%;
+  top: 44%;
+}
+main .top-bj #parentContainer .app-wrapper .app-content:nth-child(11) {
+  left: 58%;
+  top: 10%;
 }
 main .application-content {
   margin-top: 2.396vw;
@@ -260,6 +443,9 @@ main .consult .main-item .main-map .main-map-conent p {
 @media screen and (max-width: 576px) {
   main .school .school-main .school-list .school-item {
     width: 100%;
+  }
+  main .top-name .top-title-name {
+    font-size: 22px !important;
   }
   main .financially .financially-main .financially-item li {
     width: 48%;
