--- a/css/teach-staff.scss
+++ b/css/teach-staff.scss
@@ -8,6 +8,7 @@ main {
         margin: 0px 0 16px;
         display: flex;
         align-items: center;
+
         img {
             display: inline-block;
             margin-right: 10px;
@@ -38,13 +39,13 @@ main {
 
 
             .list {
-                padding: 15px 15px 40px;
+                padding: 15px;
 
                 .list-item {
                     padding: 15px;
                     position: relative;
                     background-color: #F7F7F7;
-                    margin-bottom: 15px;
+                    margin-bottom: 20px;
 
                     .desc {
 
@@ -92,10 +93,11 @@ main {
             }
 
             .pagination {
-                margin: 0 0 40px;
+                margin: 5px 0 20px;
+                line-height: 2;
 
                 .prev {
-                    margin-right: 10px;
+                    margin-right: 20px;
                     padding: 2px 6px;
                 }
 
@@ -147,6 +149,7 @@ main {
                         position: relative;
                         align-items: center;
                         cursor: pointer;
+
                         .icon {
                             position: absolute;
                             top: 50%;
@@ -348,7 +351,7 @@ main {
 
                 .list {
 
-                    padding: 1.667vw 1.667vw 4.531vw;
+                    padding: 1.667vw;
 
                     .list-item {
                         padding: 1.094vw 1.875vw 1.198vw 1.459vw;
@@ -373,7 +376,7 @@ main {
 
 
                 .pagination {
-                    margin: 0 0 2.7604vw;
+                    margin: 0 0 1.667vw;
                 }
             }
 
@@ -411,7 +414,7 @@ main {
             .content-left {
 
                 .list {
-                    padding: 32px 32px 87px;
+                    padding: 32px;
 
                     .list-item {
                         padding: 21px 36px 23px 28px;
@@ -433,7 +436,7 @@ main {
                 }
 
                 .pagination {
-                    margin: 0 0 53px;
+                    margin: 0 0 32px;
                 }
             }
 
