--- a/css/news-bulletin.css
+++ b/css/news-bulletin.css
@@ -3,145 +3,164 @@ main {
   line-height: 1.5;
   padding-bottom: 40px;
 }
+
 main .top-nav {
   padding-top: 8px;
   margin: 0px 0 16px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
+
 main .top-nav img {
   display: inline-block;
   margin-right: 10px;
 }
+
 main .top-nav a {
   color: #98989A;
   font-size: 14px;
   margin-right: 8px;
 }
+
 main .top-nav span {
   color: #171717;
 }
+
 main .main-content .content-left {
   width: 75.923077%;
   background-color: #FFFFFF;
 }
+
 main .main-content .content-left .writing {
   border-radius: 8px 10px 10px 10px;
 }
+
 main .main-content .content-left .title {
   margin: 18px;
 }
+
 main .main-content .content-left .list {
   margin: 0 20px 0 21px;
 }
+
 main .main-content .content-left .list .list-item {
   margin-bottom: 20px;
   position: relative;
   background-color: #F7F7F7;
 }
+
 main .main-content .content-left .list .list-item .desc {
   padding: 24px 0 31px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   position: relative;
   overflow: hidden;
   width: 100%;
   height: 100%;
 }
+
 main .main-content .content-left .list .list-item .desc:hover img {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
 }
+
 main .main-content .content-left .list .list-item .desc img {
   width: 100%;
   height: 100%;
-  -webkit-transition: -webkit-transform 0.3s ease-in-out;
-  transition: -webkit-transform 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
   margin-right: 18px;
   margin-left: 18px;
 }
+
 main .main-content .content-left .list .list-item .desc .text-title {
   margin-bottom: 23px;
 }
+
 main .main-content .content-left .list .list-item .text {
   width: 65.437%;
 }
+
 main .main-content .content-left .list .list-item .detail-desc {
   line-height: 1.5;
   color: #656565;
 }
+
 main .main-content .content-left .list .list-item .origin-box {
   position: absolute;
   top: 50%;
   left: 0;
-  -webkit-transform: translate(0, -50%);
-          transform: translate(0, -50%);
+  transform: translate(0, -50%);
   background-color: #F57C40;
   padding: 1.209vw;
   color: #fff;
   text-align: center;
 }
+
 main .main-content .content-left .list .list-item:last-child {
   margin-bottom: 0;
 }
+
 main .main-content .content-left .date-list {
   margin: 20px 0 0;
 }
+
 main .main-content .content-left .date-list .first-date-list-item {
   color: #fff;
   background: url(../img/news/time-bj.png) no-repeat center;
   background-size: 100% 100%;
 }
+
 main .main-content .content-left .date-list .date-list-item {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   padding: 16px;
   margin-bottom: 26px;
   background-color: #F7F7F7;
   cursor: pointer;
 }
+
 main .main-content .content-left .date-list .date-list-item .item-time {
   color: #1652CC;
 }
+
 main .main-content .content-left .date-list .date-list-item .item-time-active {
   color: #fff;
 }
+
 main .main-content .content-left .date-list .date-list-item:last-child {
   margin-bottom: 0;
 }
+
 main .main-content .content-left .date-list .bluecolor {
   color: #1652CC;
 }
+
 main .main-content .content-left .date-list .item-time {
   text-align: center;
 }
+
 main .main-content .content-left .date-list .first-text {
   border-left: 1px solid rgba(255, 255, 255, 0.2);
 }
+
 main .main-content .content-left .date-list .text {
   margin-left: 12px;
   padding-left: 18px;
   line-height: 1.5;
   border-left: 1px solid rgba(22, 82, 104, 0.2);
 }
+
 main .main-content .content-left .date-list .text .text-title {
   margin-bottom: 19px;
 }
+
 main .main-content .content-left .pagination {
-  margin: 68px 0 50px;
+  margin: 20px auto;
+  line-height: 2;
 }
+
 main .main-content .content-left .pagination .prev {
   margin-right: 10px;
   padding: 2px 6px;
 }
+
 main .main-content .content-left .pagination a {
   width: 30px;
   height: 30px;
@@ -152,17 +171,18 @@ main .main-content .content-left .pagination a {
   background-color: #fff;
   color: #1f83f1;
 }
+
 main .main-content .content-left .pagination a.active, main .main-content .content-left .pagination a:hover {
   background-color: #1f83f1;
   color: #fff;
 }
+
 main .main-content .content-right {
   width: 23.384615%;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
   height: fit-content;
   background-color: #fff;
 }
+
 main .main-content .content-right .accordion .radius-icon {
   display: inline-block;
   width: 9px;
@@ -170,27 +190,29 @@ main .main-content .content-right .accordion .radius-icon {
   border: 2px solid #535353;
   border-radius: 50%;
 }
+
 main .main-content .content-right .accordion .zhedie {
   padding: 16px;
 }
+
 main .main-content .content-right .accordion .accordion-item {
   margin-bottom: 4px;
   background-color: #e3e3e3;
 }
+
 main .main-content .content-right .accordion .accordion-item .listtext {
   position: relative;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   cursor: pointer;
 }
+
 main .main-content .content-right .accordion .accordion-item .listtext .icon {
   position: absolute;
   top: 50%;
   right: 20px;
-  -webkit-transform: translate(0, -50%);
-          transform: translate(0, -50%);
+  transform: translate(0, -50%);
 }
+
 main .main-content .content-right .accordion .accordion-item .listtext::after {
   display: inline-block;
   content: "";
@@ -201,6 +223,7 @@ main .main-content .content-right .accordion .accordion-item .listtext::after {
   background: url(../img/news/icon-close.png) no-repeat center;
   background-size: 100%;
 }
+
 main .main-content .content-right .accordion .accordion-item .listtext-open::after {
   display: inline-block;
   content: "";
@@ -211,33 +234,42 @@ main .main-content .content-right .accordion .accordion-item .listtext-open::aft
   background: url(../img/news/icon-explant.png) no-repeat center;
   background-size: 100%;
 }
+
 main .main-content .content-right .accordion .accordion-item .radius-icon {
   margin-right: 12px;
 }
+
 main .main-content .content-right .accordion .accordion-item .title {
   cursor: pointer;
 }
+
 main .main-content .content-right .accordion .accordion-item .content {
   display: none;
 }
+
 main .main-content .content-right .accordion .accordion-item .content a:last-child {
   border-bottom: none;
 }
+
 main .main-content .content-right .accordion .accordion-item .content p {
   border-bottom: 1px solid #ccc;
 }
+
 main .main-content .content-right .accordion .accordion-item .expand-content {
   display: block;
 }
+
 main .main-content .content-right .accordion .accordion-item .expand-active {
   display: block;
   position: relative;
 }
+
 main .main-content .content-right .accordion .accordion-item .expand-active p {
   padding: 17px 0 17px 73px;
   color: #000 !important;
   background-color: #fff;
 }
+
 main .main-content .content-right .accordion .accordion-item .expand-active p::before {
   content: "";
   display: inline-block;
@@ -247,14 +279,15 @@ main .main-content .content-right .accordion .accordion-item .expand-active p::b
   border-radius: 4px;
   position: absolute;
   left: 42px;
-  -webkit-transform: translateY(50%);
-          transform: translateY(50%);
+  transform: translateY(50%);
 }
+
 main .main-content .content-right .latest-update {
   border-top: 4px solid #1551cc;
   margin-top: 30px;
   padding: 13px;
 }
+
 main .main-content .content-right .latest-update .radius-icon {
   width: 9px;
   height: 9px;
@@ -262,14 +295,17 @@ main .main-content .content-right .latest-update .radius-icon {
   border-radius: 50%;
   margin-right: 12px;
 }
+
 main .main-content .content-right .latest-update li {
   margin: 8px 0;
   padding-top: 8px;
   border-top: 1px solid rgba(226, 226, 226, 0.5);
 }
+
 main .main-content .content-right .latest-update li .desc {
   margin-bottom: 16px;
 }
+
 main .main-content .content-right .latest-update li time {
   margin-left: 6px;
 }
@@ -279,7 +315,7 @@ main .main-content .content-right .latest-update li time {
     width: 100%;
   }
   main .main-content .content-left .list {
-    margin: 0;
+    margin: 20px 0 0;
   }
   main .main-content .content-left .list .list-item .origin-box {
     line-height: 1;
@@ -297,9 +333,10 @@ main .main-content .content-right .latest-update li time {
     left: 3.234vw;
   }
 }
+
 @media screen and (max-width: 600px) {
   main .main-content .content-left .pagination {
-    margin: 40px 0;
+    margin: 20px auto;
   }
   main .main-content .content-left .pagination .prev {
     padding: 1px;
@@ -310,19 +347,15 @@ main .main-content .content-right .latest-update li time {
     font-size: 14px;
   }
 }
+
 @media screen and (max-width: 564px) {
   main .main-content .content-left .list .list-item .origin-box {
     left: -3%;
     top: 30%;
   }
   main .main-content .content-left .list .list-item .desc {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
+    flex-direction: column;
+    align-items: baseline;
   }
   main .main-content .content-left .list .list-item .desc img {
     width: 90%;
@@ -335,6 +368,7 @@ main .main-content .content-right .latest-update li time {
     left: 7.234vw;
   }
 }
+
 @media screen and (min-width: 992px) {
   main {
     padding-bottom: 4.5314vw;
@@ -363,7 +397,7 @@ main .main-content .content-right .latest-update li time {
     padding: 0.781vw 0.729vw;
   }
   main .main-content .content-left .date-list {
-    margin: 26px 20px 0 21px;
+    margin: 25px 20px 0;
   }
   main .main-content .content-left .date-list .date-list-item {
     padding: 1.354vw 1.406vw 1.406vw 1.719vw;
@@ -372,7 +406,8 @@ main .main-content .content-right .latest-update li time {
     margin-left: 1.5104vw;
   }
   main .main-content .content-left .pagination {
-    margin: 3.5416vw 0 2.60416vw;
+    line-height: 2;
+    margin: 1.042vw auto;
   }
   main .main-content .content-right .accordion .zhedie {
     padding: 0.781vw 0 0.781vw 1.094vw;
@@ -390,6 +425,7 @@ main .main-content .content-right .latest-update li time {
     margin-bottom: 1.198vw;
   }
 }
+
 @media screen and (min-width: 1920px) {
   main {
     padding-bottom: 87px;
@@ -398,7 +434,7 @@ main .main-content .content-right .latest-update li time {
     margin: 24px 0 25px 33px;
   }
   main .main-content .content-left .list {
-    margin: 0 20px 0 21px;
+    margin: 20px 20px 0 21px;
   }
   main .main-content .content-left .list .list-item {
     margin-bottom: 25px;
@@ -417,7 +453,7 @@ main .main-content .content-right .latest-update li time {
     padding: 15px 14px 16px 12px;
   }
   main .main-content .content-left .date-list {
-    margin: 29px 20px 0 21px;
+    margin: 25px 20px 0 21px;
   }
   main .main-content .content-left .date-list .date-list-item {
     padding: 26px 27px 27px 33px;
@@ -426,7 +462,7 @@ main .main-content .content-right .latest-update li time {
     margin-left: 35px;
   }
   main .main-content .content-left .pagination {
-    margin: 68px 0 50px;
+    margin: 20px auto;
   }
   main .main-content .content-right .accordion .zhedie {
     padding: 15px 0 15px 21px;
