--- a/css/employment-information.css
+++ b/css/employment-information.css
@@ -1,5 +1,5 @@
 main .total-info {
-  margin: 30px 0;
+  margin: 20px 0;
   padding-bottom: 30px;
   background-color: #F8FAFA;
 }
@@ -159,8 +159,7 @@ main .consult .cont-right {
 }
 @media screen and (min-width: 992px) {
   main .total-info {
-    margin-top: 3.0729vw;
-    margin-bottom: 2.969vw;
+    margin-top: 2.292vw;
     padding-bottom: 2.7604vw;
   }
   main .tabNav li {
@@ -181,7 +180,7 @@ main .consult .cont-right {
     display: none;
   }
   main .guidance .msg {
-    margin: 3.854vw auto 3.021vw;
+    margin: 2.8125vw auto;
   }
   main .guidance .msg-left .title {
     right: 0.521vw;
@@ -197,8 +196,7 @@ main .consult .cont-right {
 }
 @media screen and (min-width: 1920px) {
   main .total-info {
-    margin-top: 59px;
-    margin-bottom: 57px;
+    margin-top: 44px;
     padding-bottom: 53px;
   }
   main .tabNav li {
@@ -213,7 +211,7 @@ main .consult .cont-right {
     margin-top: 50px;
   }
   main .guidance .msg {
-    margin: 74px auto 58px;
+    margin: 54px auto;
   }
   main .guidance .msg-left .title {
     right: 10px;
@@ -329,6 +327,10 @@ main .consult .cont-right {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    margin: 0 auto;
+  }
+  main .guidance .msg-left .title {
+    font-size: 24px;
   }
   main .guidance .msg-right li div {
     -webkit-box-pack: center;
