--- a/css/employment-information.scss
+++ b/css/employment-information.scss
@@ -2,7 +2,7 @@ main {
 
 
     .total-info {
-        margin: 30px 0;
+        margin: 20px 0;
         padding-bottom: 30px;
         background-color: #F8FAFA;
 
@@ -200,8 +200,7 @@ main {
 
     main {
         .total-info {
-            margin-top: 3.0729vw;
-            margin-bottom: 2.969vw;
+            margin-top:2.292vw;
             padding-bottom: 2.7604vw;
         }
 
@@ -233,7 +232,7 @@ main {
         // 就业指导
         .guidance {
             .msg {
-                margin: 3.854vw auto 3.021vw;
+                margin: 2.8125vw auto;
             }
 
             .msg-left {
@@ -264,8 +263,7 @@ main {
 @media screen and (min-width:1920px) {
     main {
         .total-info {
-            margin-top: 59px;
-            margin-bottom: 57px;
+            margin-top: 44px;
             padding-bottom: 53px;
         }
 
@@ -288,7 +286,7 @@ main {
         // 就业指导
         .guidance {
             .msg {
-                margin: 74px auto 58px;
+                margin: 54px auto;
             }
 
             .msg-left {
@@ -448,8 +446,13 @@ main {
             .msg {
                 flex-direction: column;
                 align-items: center;
+                margin: 0 auto;
             }
-
+            .msg-left {
+                .title{
+                    font-size: 24px;
+                }
+            }
             .msg-right {
                 li {
                     div {
