--- a/css/news-reading.scss
+++ b/css/news-reading.scss
@@ -5,7 +5,7 @@ main {
 
     .top-nav {
         padding-top: 8px;
-        margin: 0px 0 16px;
+        margin: 0;
         display: flex;
         img {
             display: inline-block;
@@ -57,7 +57,7 @@ main {
                 }
 
                 img {
-                    margin: 30px auto;
+                    margin: 20px auto;
                 }
             }
 
@@ -276,7 +276,7 @@ main {
 
             .content-left {
                 .writing {
-                    padding: 2.292vw 1.406vw;
+                    padding: 1.25vw 1.406vw;
                 }
 
                 .title {
@@ -287,7 +287,7 @@ main {
                     margin: 1.979vw 0.885vw;
 
                     img {
-                        margin: 3.229vw auto;
+                        margin: 1.979vw auto;
                     }
                 }
 
@@ -337,7 +337,7 @@ main {
         .main-content {
             .content-left {
                 .writing {
-                    padding: 44px 27px 44px 33px;
+                    padding: 24px 27px 44px 24px;
                 }
 
                 .title {
@@ -348,7 +348,7 @@ main {
                     margin: 38px 17px 0 13px;
 
                     img {
-                        margin: 62px auto 69px;
+                        margin:38 auto;
                     }
                 }
 
