--- a/css/style.scss
+++ b/css/style.scss
@@ -150,12 +150,13 @@ html {
         span {
             font-size: 0.9375vw;
             opacity: 0.59;
+            line-height: 1.2;
         }
 
         h2 {
             margin-top: 0;
             font-size: 1.875vw;
-            line-height: 1.1;
+            line-height: 1.2;
         }
     }
 }
@@ -286,7 +287,7 @@ html {
 // 支部活动
 .branch-activity {
     background-color: #fff;
-    padding: 0px 0 40px;
+    padding: 0px 0 20px;
 
     h3 {
         text-align: center;
@@ -403,9 +404,6 @@ html {
 
     .branch-activity {
 
-
-        h3 {}
-
         .branch-list-item {
             width: 48%;
 
@@ -458,21 +456,21 @@ html {
     -webkit-box-orient: vertical;
 }
 
-@media screen and (min-width:576px) {
+// @media screen and (min-width:576px) {
 
-    main {
-        .announcement {
-            padding-top: 2.854vw;
-        }
-    }
-}
+//     main {
+//         .announcement {
+//             padding-top: 2.854vw;
+//         }
+//     }
+// }
 
 @media screen and (min-width:768px) {
 
 
     main {
         .announcement {
-            padding-top: 3.854vw;
+            padding-top: 2.292vw;
         }
     }
 }
@@ -492,7 +490,7 @@ html {
 
     .branch-activity {
 
-        padding: 0 0 3.229vw;
+        padding: 0 0 2.604vw;
 
         h3 {
             margin-bottom: 2.8125vw;
@@ -571,7 +569,7 @@ html {
 
     main {
         .announcement {
-            padding-top: 74px;
+            padding-top: 44px;
 
             .announ-left {
                 &::before {
@@ -583,7 +581,7 @@ html {
     }
 
     .branch-activity {
-        padding: 0px 0 62px;
+        padding: 0px 0 50px;
 
         h3 {
             margin-bottom: 54px;
